--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1,7 +1,8 @@
-﻿{
+{
   "metadata": {
     "name": "Project",
     "kernelspec": {
+      "display_name": "Scala (Spark 2)",
       "language": "scala",
       "name": "spark2-scala"
     },
